# GPU-Hydra

./: .gitignore  CMakeLists.txt
include/: Hydra.h  finite_field.h  matrix.h  polynomial.h
src/: Hydra.cu  finite_field.cu  finite_field_right.cu  matrix.cu  polynomial.cu
test/: test_finite_field.cu  test_hydra.cu  test_matrix_basic.cu  test_matrix_isinvertible.cu  test_polynomial.cu  test_shake.cu  test_unit128.cu
